src/app/styles/index.css
.page-wrapper {
  grid-template-columns: 1fr;
  @apply grid gap-2 flex-1 overflow-y-auto;
}

@media (min-width: 1280px) {
  .page-wrapper {
    grid-template-columns: 2fr 0.7fr;
  }
}

.adjusted-column-height {
  height: calc(100% - 200px);
}

.viewport-height-minus-padding {
  height: calc(100vh - 100px);
}

